tracing-rc-derive/tests/bad_attributes/multiple.stderr
error: Cannot specify multiple `#[trace]` attributes.
 --> tests/bad_attributes/multiple.rs:6:5
  |
6 |     #[trace]
  |     ^
